@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4TrajectoryContainer.hh,v 1.8 2001-07-13 15:01:47 gcosmo Exp $
+// $Id: G4TrajectoryContainer.hh,v 1.9 2002-05-15 05:47:49 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -37,21 +37,58 @@
 #ifndef G4TrajectoryContainer_h
 #define G4TrajectoryContainer_h 1
 
+#include "globals.hh"
 #include "G4VTrajectory.hh"
+#include "G4Allocator.hh"
+#include "g4std/vector"
 
-class G4TrajectoryContainer : public G4std::vector<G4VTrajectory*>
+typedef G4std::vector<G4VTrajectory*> TrajectoryVector;
+
+class G4TrajectoryContainer
 {
   public:
-    G4TrajectoryContainer() {;}
-    ~G4TrajectoryContainer() {;}
+    G4TrajectoryContainer();
+    ~G4TrajectoryContainer();
+
+    inline void *operator new(size_t);
+    inline void operator delete(void* anEvent);
+
+    G4int operator==(const G4TrajectoryContainer& right) const;
+    G4int operator!=(const G4TrajectoryContainer& right) const;
 
   public:
-    inline G4int entries() { return size(); }
+    inline size_t size() const { return vect->size(); }
+    inline void push_back(G4VTrajectory* p) { vect->push_back(p); }
+    inline G4int entries() const { return size(); }
     inline G4bool insert(G4VTrajectory* p) { push_back(p); return true; }
     inline void clearAndDestroy()
     {
-      for(size_t i=0;i<size();i++) delete (*this)[i];
-      clear();
+      for(size_t i=0;i<size();i++) delete (*vect)[i];
+      vect->clear();
     }
+    inline G4VTrajectory** begin() const { return vect->begin(); }
+    inline G4VTrajectory** end() const { return vect->end(); }
+    inline G4VTrajectory* operator[](size_t n) { return (*vect)[n]; }
+    inline TrajectoryVector* GetVector() const { return vect; }
+
+  private:
+    TrajectoryVector* vect;
 };
+
+
+extern G4Allocator<G4TrajectoryContainer> aTrajectoryContainerAllocator;
+
+inline void* G4TrajectoryContainer::operator new(size_t)
+{
+  void* aTrajectoryContainer;
+  aTrajectoryContainer = (void*)aTrajectoryContainerAllocator.MallocSingle();
+  return aTrajectoryContainer;
+}
+
+inline void G4TrajectoryContainer::operator delete(void* aTrajectoryContainer)
+{
+  aTrajectoryContainerAllocator.FreeSingle((G4TrajectoryContainer*)aTrajectoryContainer);
+}
+
+
 #endif
